WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311007
Video decode with V4L2 doesn't work unless bwrap sandbox is disabled
https://bugs.webkit.org/show_bug.cgi?id=311007
Summary
Video decode with V4L2 doesn't work unless bwrap sandbox is disabled
Sebastian Krzyszkowiak
Reported
2026-03-28 17:17:35 PDT
On a platform with VPU accessible over V4L2, such as i.MX 8M Quad, any video played in WebKitGTK is decoded in software unless WEBKIT_DISABLE_SANDBOX_THIS_IS_DANGEROUS=1 is set.
Attachments
Add attachment
proposed patch, testcase, etc.
Sebastian Krzyszkowiak
Comment 1
2026-03-28 17:22:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61600
EWS
Comment 2
2026-03-29 22:39:21 PDT
Committed
310201@main
(67bd935f84ae): <
https://commits.webkit.org/310201@main
> Reviewed commits have been landed. Closing PR #61600 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug