[GTK][WPE] BubblewrapLauncher: Expose all V4L2 devices https://bugs.webkit.org/show_bug.cgi?id=311007

Reviewed by Claudio Saavedra and Patrick Griffis.

Although GTK uses xdg-desktop-portal for cameras, it still needs V4L2
devices to be exposed in the sandbox to make V4L2 video decode work.

WPE already exposed some nodes, but not enough for some platforms,
such as i.MX 8M Quad, where there are 2 camera and 2 VPU nodes.

Make both GTK and WPE expose all V4L2 nodes.

* Source/WebKit/UIProcess/Launcher/glib/BubblewrapLauncher.cpp:
(WebKit::bindV4l):
(WebKit::bubblewrapSpawn):

Canonical link: https://commits.webkit.org/310201@main