Source/WebKit/UIProcess/Launcher/glib/BubblewrapLauncher.cpp
@@ -485,19 +485,31 @@ static void bindOpenGL(Vector<CString>& args)
     }));
 }
 
-#if PLATFORM(WPE)
 static void bindV4l(Vector<CString>& args)
 {
     args.appendVector(Vector<CString>({
         "--dev-bind-try", "/dev/v4l", "/dev/v4l",
-        // Not pretty but a stop-gap for pipewire anyway.
-        "--dev-bind-try", "/dev/video0", "/dev/video0",
-        "--dev-bind-try", "/dev/video1", "/dev/video1",
-        "--dev-bind-try", "/dev/video2", "/dev/video2",
-        "--dev-bind-try", "/dev/media0", "/dev/media0",
     }));
+
+    for (StringView fileName : FileSystem::listDirectory("/dev"_s)) {
+        bool isV4LNode = [&] () {
+            static constexpr std::array<ASCIILiteral, 3> nodeNames = { "video"_s, "media"_s, "v4l-subdev"_s };
+            for (const auto& nodeName : nodeNames) {
+                if (fileName.startsWith(nodeName) && fileName.substring(nodeName.length()).containsOnly<isASCIIDigit>())
+                    return true;
+            }
+            return false;
+        }();
+
+        if (!isV4LNode)
+            continue;
+
+        CString path = FileSystem::pathByAppendingComponent("/dev"_s, fileName).utf8();
+        args.appendVector(Vector<CString>({
+            "--dev-bind-try", path, path,
+        }));
+    }
 }
-#endif
 
 static bool enableDebugPermissions()
 {
@@ -933,18 +945,8 @@ GRefPtr<GSubprocess> bubblewrapSpawn(GSubprocessLauncher* launcher, const Proces
         bindGStreamerData(sandboxArgs);
         bindOpenGL(sandboxArgs);
 
-        // NOTE: We don't bind v4l2 devices in the sandbox for WebKitGTK builds. We expect the
-        // WebKitGTK Application/UIProcess to be packaged as a Flatpak so that Camera access can be
-        // managed via the DesktopPortal. Our fake WebProcess .flatpak-info file is not sufficient
-        // for this, at least on GNOME hosts, where GNOME-Shell expects the Window/UIProcess to also
-        // have a .flatpak-info file mapped in /proc/<pid>/root/.flatpak-info in order to show the
-        // camera access permission popup.
-        //
-        // For WPEWebKit applications, we expect to find no DesktopPortal at runtime, so we bind the
-        // v4l2 devices in the sandbox.
-#if PLATFORM(WPE)
+        // Although cameras can be managed via the DesktopPortal, we still need v4l2 for video decoding.
         bindV4l(sandboxArgs);
-#endif
 
 #if USE(ATSPI)
         auto accessibilityBusAddress = launchOptions.extraInitializationData.get("accessibilityBusAddress"_s);
